pushed new redux manager for app state and iButton connector

--- a/app/app.html
+++ b/app/app.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>OneWire Platform</title>
+    <title>TIMon</title>
     <script>
       (function() {
         if (!process.env.HOT) {
