--- a/app/print.html
+++ b/app/print.html
@@ -94,6 +94,13 @@
         left: 540px;
       }
 
+      .datePrint {
+        position: absolute;
+        top: 100px;
+        left: 650px;
+        font-size:19px;
+      }
+
   </style>
 
 </head>
